--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     </build>
 
     <dependencies>
+        <!-- JUnit Jupiter is the combination of the new programming model and extension model for writing tests and extensions in JUnit 5.-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -44,6 +45,14 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <version>5.7.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- A self-contained hamcrest jar containing all of the sub-modules in a single artifact.-->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
