--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,20 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Mockito mock objects library core API and implementation -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>3.6.0</version>
+        </dependency>
+
+        <!-- Mockito JUnit 5 support -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>3.6.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
